
          Release Notes for Bacula 1.37.32

  Bacula code: Total files = 420 Total lines = 137,098 (*.h *.c *.in)

Major Changes:
- There is a new database format that is not compatible
  with previous databases. You must upgrade if converting
  from 1.36.x.
- The Director, Storage daemon, and File daemons are
  Deamons are not compatible with  prior versions. 
  All FDs must be upgraded at the same time.
- Multiple drive autochanger support. You *must* update
  your SD conf file.
- Support for ANSI/IBM labels.
- New communications protocol between DIR and SD to reserve 
  drives.
- Faster database inserts due to combining the MD5/SHA1 into
  the attributes record, eliminating one INSERT/file backed up.
- Python Event support has been added. See below for
  configuration and details. Unfortunately, it is not yet complete
  and the only really useful function is defining a new
  Volume name.
- DVD writing support, using parts, and a lot of new directives in
  the Device resource of the Storage configuration file thanks
  to Nicolas Boichat. Please note that this code is still 
  experimental and should be carefully tested before using in
  production.
- Seven new options keywords in a FileSet resource:
  ignorecase, fstype, hfsplussupport, wilddir, wildfile, regexdir,
  and regexfile thanks to Pruben Guldberg). See below for details.
- Restore of all files for a Job or set of jobs even if the file
  records have been removed from the catalog.
- Restore of a directory (non-recursive, i.e. only one level).
- Support for TLS (ssl) between all the daemon connections thanks
  to Landon Fuller. This is mostly untested.
- Any Volume in the Pool named Scratch may be reassigned to any
  other Pool when a new Volume is needed.
- You may clone a Job and thus write (almost) the same data
  to multiple Volumes simultaneously (see below). Actually, 
  any Job may start any other Job with this mechanism, so it
  also be used to group jobs.